tests/test87.rael.exp
Error [tests/test87.rael:1:4]: Unmatched '('
| (87
|    ^
